--- a/index.html
+++ b/index.html
@@ -89,6 +89,39 @@ main.content{ max-width:var(--content-max); margin:40px auto; padding:0 20px 80p
 .card { background:linear-gradient(180deg, rgba(2,10,14,0.45), rgba(2,10,14,0.6)); border-radius:14px; padding:20px; border:1px solid rgba(255,255,255,0.02); box-shadow:0 10px 24px rgba(2,10,12,0.45); }
 .card h3{ margin:0 0 10px; color:var(--white); } .card p{ margin:0; color:var(--muted); }
 
+/* Testimonials slider styles (added) */
+.testimonial-slider {
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  margin-top: 20px;
+}
+.testimonial-track {
+  display: flex;
+  gap: 20px;
+  align-items: stretch;
+  /* animation will be applied dynamically via keyframes below */
+  animation: scrollTestimonials 28s linear infinite;
+}
+.testimonial-card {
+  min-width: 320px;
+  max-width: 320px;
+  background: linear-gradient(180deg, rgba(2,10,14,0.45), rgba(2,10,14,0.6));
+  padding: 20px;
+  border-radius: 14px;
+  border: 1px solid rgba(255,255,255,0.03);
+  box-shadow: 0 10px 24px rgba(2,10,12,0.45);
+  text-align: center;
+}
+.testimonial-card .quote { color: var(--muted); font-style: italic; margin-bottom: 12px; }
+.testimonial-card .author { font-weight:700; color: var(--white); }
+
+/* Keyframes: move left by half the track (duplicated track technique) */
+@keyframes scrollTestimonials {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+
 /* FAQ */
 .faq-list { max-width:860px; margin:0 auto; } .faq-item { background:transparent; border-radius:12px; margin-bottom:12px; padding:14px 16px; border:1px solid rgba(255,255,255,0.03); display:flex; align-items:flex-start; justify-content:space-between; cursor:pointer; }
 .faq-q { font-weight:700; color:var(--white); margin:0; } .faq-a { margin-top:10px; color:var(--muted); display:none; } .faq-item.open .faq-a { display:block; }
@@ -103,9 +136,9 @@ main.content{ max-width:var(--content-max); margin:40px auto; padding:0 20px 80p
 /* footer */
 footer.sitefoot { padding:36px 16px; text-align:center; color:var(--muted); font-size:14px; border-top:1px solid rgba(255,255,255,0.02); }
 
-/* responsive */
-@media (max-width:1024px){ .hero-inner { grid-template-columns: 1fr 420px; gap:30px; } .hero h1 { font-size:2.8rem; } }
-@media (max-width:820px){ .hero-inner { grid-template-columns: 1fr; gap:28px; padding-bottom:0; } .hero .right { order:2; } .hero-card { max-width:100%; } .hero h1{ font-size:2.2rem; } .grid-3 { grid-template-columns:repeat(2,1fr); } }
+/* responsive tweaks */
+@media (max-width:1024px){ .hero-inner { grid-template-columns: 1fr 420px; gap:30px; } .hero h1 { font-size:2.8rem; } .testimonial-card { min-width: 280px; max-width: 280px; } .grid-3 { gap:16px; } }
+@media (max-width:820px){ .hero-inner { grid-template-columns: 1fr; gap:28px; padding-bottom:0; } .hero .right { order:2; } .hero-card { max-width:100%; } .hero h1{ font-size:2.2rem; } .grid-3 { grid-template-columns:repeat(2,1fr); } .testimonial-card { min-width: 220px; max-width: 220px; } }
 @media (max-width:520px){
   nav.topnav{display:none}
   .hero{padding:28px 12px 38px}
@@ -113,6 +146,8 @@ footer.sitefoot { padding:36px 16px; text-align:center; color:var(--muted); font
   .hero p.lead{ font-size:0.97rem; }
   .actions{flex-direction:column; align-items:flex-start}
   .grid-3 { grid-template-columns:1fr; }
+  .testimonial-track { gap:12px; }
+  .testimonial-card { min-width: 200px; max-width: 200px; padding:16px; }
 }
 .btn:focus, .contact-wrap input:focus, .contact-wrap textarea:focus { box-shadow:0 6px 18px rgba(14,165,233,0.12); border-color: rgba(14,165,233,0.24); }
 .copy-btn { padding:8px 12px; border-radius:8px; background:rgba(255,255,255,0.06); color:var(--white); border:1px solid rgba(255,255,255,0.03); cursor:pointer; }
@@ -221,7 +256,7 @@ footer.sitefoot { padding:36px 16px; text-align:center; color:var(--muted); font
     </div>
   </section>
 
-  <!-- REPLACED: Expanded Case Studies section -->
+  <!-- Case studies (kept as previously updated) -->
   <section id="case-studies" class="section" aria-labelledby="case-title">
     <h2 id="case-title">Case studies</h2>
 
@@ -264,24 +299,33 @@ footer.sitefoot { padding:36px 16px; text-align:center; color:var(--muted); font
     </div>
   </section>
 
-  <section class="section" style="margin-top:34px;">
-    <div class="card" style="display:flex;align-items:center;justify-content:space-between; gap:20px;">
-      <div>
-        <h3 style="margin:0 0 6px;">Curious how AI fits your workflow?</h3>
-        <p style="margin:0;color:var(--muted)">Tell us one pain point — we'll propose a focused experiment.</p>
-      </div>
-      <div>
-        <a class="btn btn-primary" href="#contact">Start conversation</a>
-      </div>
-    </div>
-  </section>
-
+  <!-- REPLACED Testimonials section with slider -->
   <section id="testimonials" class="section" aria-labelledby="testimonials-title">
     <h2 id="testimonials-title">What clients say</h2>
-    <div class="testimonials" style="margin-top:18px;">
-      <div class="card" style="text-align:center;">
-        <p style="font-style:italic; color:var(--muted); margin:18px 0;">"They automated reporting workflows and reduced manual effort by 40%."</p>
-        <p style="margin:0; font-weight:700;">— Head of Ops, Logistics</p>
+
+    <div class="testimonial-slider" aria-hidden="false">
+      <div class="testimonial-track" aria-live="polite">
+        
+        <div class="testimonial-card">
+          <p class="quote">"They automated reporting workflows and reduced manual effort by 40%."</p>
+          <p class="author">— Head of Ops, Logistics</p>
+        </div>
+
+        <div class="testimonial-card">
+          <p class="quote">"Our support agents resolve queries faster thanks to the NLP Copilot."</p>
+          <p class="author">— Customer Support Lead, FinTech</p>
+        </div>
+
+        <div class="testimonial-card">
+          <p class="quote">"Document extraction accuracy was impressive. Saved us days of manual work."</p>
+          <p class="author">— Operations Manager, Enterprise</p>
+        </div>
+
+        <div class="testimonial-card">
+          <p class="quote">"The AI workflow automation transformed our weekly reporting."</p>
+          <p class="author">— Analytics Director, Logistics</p>
+        </div>
+
       </div>
     </div>
   </section>
@@ -563,6 +607,15 @@ document.querySelectorAll('a[href^="#"]').forEach(a => {
     }
   });
 });
+
+/* Duplicate testimonials for infinite scroll (added) */
+(function duplicateTestimonials(){
+  const track = document.querySelector('.testimonial-track');
+  if(track){
+    // duplicate innerHTML to create a seamless loop; animation translates -50%
+    track.innerHTML = track.innerHTML + track.innerHTML;
+  }
+})();
 
 /* Hero image fallback notice for debugging (console) */
 (function checkHero(){
